--- a/vignettes/gene-ontology.Rmd
+++ b/vignettes/gene-ontology.Rmd
@@ -91,7 +91,10 @@ fgseaRes <- fgsea(pathways = pathways,
 head(fgseaRes[order(pval), ])
 ```
 
-Embed the `r BiocStyle::Biocpkg("fgsea")` results in the `r BiocStyle::Biocpkg("SummarizedExperiment")` object.
+Embed the `r BiocStyle::Biocpkg("fgsea")` results in a `r BiocStyle::Biocpkg("SummarizedExperiment")` object.
+
+In this case, we simulate count data, using the same feature identifiers as we used in the pathway analysis.
+This will make it to demonstrate how the set of features associated with a pathway can be transmitted and highlighted in another panel in the the user interface.
 
 ```{r, message=FALSE, warning=FALSE}
 library("SummarizedExperiment")
@@ -101,9 +104,7 @@ cnts <- matrix(rnbinom(n=ngenes*2, mu=100, size=1/0.5), nrow=ngenes)
 rownames(cnts) <- names(feature_stats)
 se <- SummarizedExperiment(assay = list(counts = cnts))
 
-fgseaRes <- as.data.frame(fgseaRes)
-rownames(fgseaRes) <- fgseaRes$pathway
-metadata(se) <- list("iSEEpathways" = list("fgsea" = fgseaRes))
+se <- embedPathwaysResults(fgseaRes, se, name = "fgsea", class = "fgsea", pathwayType = "GO")
 ```
 
 ## Live app
